--- a/styles/main/burger-nav.module.css
+++ b/styles/main/burger-nav.module.css
@@ -11,7 +11,8 @@
     padding: 25px;
     display: flex;
     flex-direction: column;
-    background-color: #ffffff;
+    background-color: #fdfdfd;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
     transform: translate(0, -300px);
 }
 
