--- a/styles/common/header-green.module.css
+++ b/styles/common/header-green.module.css
@@ -10,3 +10,16 @@
     text-transform: uppercase;
     color: #fff;
 }
+
+@media (max-width: 991px) {
+    .headerGreen  {
+        height: auto;
+    }
+}
+
+@media (max-width: 991px) {
+    .title  {
+        font-size: 30px;
+        padding-bottom: 31px;
+    }
+}
