--- a/styles/psychologist/section-psychologist.module.css
+++ b/styles/psychologist/section-psychologist.module.css
@@ -2,7 +2,7 @@
     padding-bottom: 90px;
 }
 
-.questionTitle{
+.questionTitle {
     font-style: normal;
     font-weight: 600;
     font-size: 22px;
@@ -11,7 +11,7 @@
     margin-bottom: 20px;
 }
 
-.answerBlock{
+.answerBlock {
     -webkit-box-align: inherit;
     -ms-flex-align: inherit;
     align-items: inherit;
@@ -25,7 +25,15 @@
     flex-wrap: wrap;
 }
 
-.answerFor{
+@media (max-width: 1000px) {
+    .answerBlock {
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+.answerFor {
     -webkit-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
@@ -48,3 +56,345 @@
     justify-content: space-between;
     margin: 0 11px;
 }
+
+@media (max-width: 1000px) {
+    .answerFor {
+        width: auto;
+        margin-bottom: 15px;
+    }
+}
+
+@media (max-width: 520px) {
+    .answerFor {
+        padding: 20px 30px;
+    }
+}
+
+.answerFor h2 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    color: #000;
+    margin-bottom: 20px;
+}
+
+.answerFor span {
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 32px;
+    line-height: 39px;
+    text-align: center;
+    color: #f9f9f9;
+    margin-right: 20px;
+}
+
+.circleForKids {
+    background: #eb3535;
+}
+
+.circleForParents {
+    background: #30aa33;
+}
+
+.listFor {
+    list-style: none;
+}
+
+.listFor li {
+    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/css/../img/arr-green-svg.svg) no-repeat left top 6px;
+    padding-left: 35px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.btnPriceBox {
+    display: flex;
+    justify-content: space-between;
+}
+
+@media (max-width: 520px) {
+    .btnPriceBox {
+        justify-content: center;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+}
+
+.btnOrder {
+    align-self: end;
+}
+
+@media (max-width: 520px) {
+    .btnOrder {
+        align-self: auto;
+        margin-top: 15px;
+    }
+}
+
+.btnRed {
+    background: #eb3535;
+    cursor: pointer;
+    width: 134px;
+    display: inline-block;
+    text-align: center;
+    font-size: 15px;
+    -webkit-transition: all .25s ease;
+    transition: all .25s ease;
+    line-height: 45px;
+    color: #fff;
+    border-radius: 30px;
+    font-weight: 400;
+    border: none;
+}
+
+.priceTime {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
+    align-items: flex-end;
+}
+
+@media (max-width: 520px) {
+    .priceTime {
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+    }
+}
+
+.price {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+    border: 1px solid #eb3535;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border-radius: 100px;
+    margin-top: 15px;
+    padding: 8px 15px;
+    text-align: center;
+}
+
+.contentPsychologist {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 27px;
+    color: #000;
+    margin-bottom: 20px;
+}
+
+.contentBlock {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+@media (max-width: 800px) {
+    .contentBlock {
+        flex-direction: row;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        margin: 0;
+    }
+}
+
+.itemPsychologist {
+    width: calc(50% - 60px);
+    margin-right: 30px;
+    margin-left: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    margin-bottom: 50px;
+}
+
+@media (max-width: 1000px) {
+    .itemPsychologist {
+        width: 100%
+    }
+}
+
+.itemPsychologistBottom {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: justify;
+    color: #000;
+    overflow-wrap: break-word;
+}
+
+.itemPsychologistTopImage {
+    margin-right: 25px;
+    width: 133px;
+    height: 133px;
+}
+
+.itemPsychologistTopImage img {
+    width: 133px;
+    height: 133px;
+    -o-object-fit: cover;
+    object-fit: cover;
+    -o-object-position: center;
+    object-position: center;
+    border-radius: 50%;
+}
+
+.itemPsychologistTop {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    margin-bottom: 27px;
+}
+
+.itemPsychologistTopRightInfo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    width: calc(100% - 158px);
+}
+
+.rightInfoTitle {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    color: #000;
+    margin-bottom: 20px;
+}
+
+.rightInfoSubTitle {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    color: #000;
+}
+
+.titleInner {
+    position: relative;
+    font-weight: 600;
+    font-size: 22px;
+    margin-bottom: 35px;
+}
+
+.formOrderBox {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    align-content: center;
+}
+
+@media (max-width: 1000px) {
+    .formOrderBox {
+        justify-content: center;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    }
+}
+
+.formSteps {
+    width: 100%;
+    max-width: 688px;
+    margin-left: 20px;
+}
+
+@media (max-width: 1000px) {
+    .formSteps {
+        margin-top: 15px;
+    }
+}
+
+.formSteps h4 {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+    margin-bottom: 12px;
+}
+
+.formSteps ul {
+    margin-bottom: 24px;
+    list-style: none;
+}
+
+.formSteps li {
+    font-size: 14px;
+    line-height: 37px;
+    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/css/../img/arr-red-svg.svg) no-repeat left top 13px;
+    padding-left: 35px;
+}
+
+.formStepImg {
+    max-width: 688px;
+    height: 281px;
+    border-radius: 40px;
+}
+
+.modal{
+    height: auto;
+    width: auto;
+    z-index: 1000;
+}
+
+
+
+
+
