--- a/styles/common/forms.module.css
+++ b/styles/common/forms.module.css
@@ -54,8 +54,8 @@
 }
 
 .formDisclaimer{
-    margin-top: 8px;
-    margin-left: 22px;
+    display: flex;
+    margin: 8px 0 40px 22px;
     line-height: 8px;
     font-weight: 500;
     font-size: 10px;
