--- a/styles/camp/filter.module.css
+++ b/styles/camp/filter.module.css
@@ -1,13 +1,20 @@
-.filter{
-    margin: 94px 15px 86px 0;
+.filter {
+    margin: 94px 15px -60px 0;
 }
 
-.title{
-    margin-bottom: 36px;
-    padding: 0 15px;
+.title {
+    width: 100%;
+    max-width: 1210px;
+    margin: 0 auto 36px;
 }
 
-.filterBox{
+@media (max-width: 1440px) {
+    .title {
+        padding: 0 15px;
+    }
+}
+
+.filterBox {
     border-top: 1px solid #d1d1d1;
     border-right: 1px solid #d1d1d1;
     border-bottom: 1px solid #d1d1d1;
@@ -17,4 +24,21 @@
     padding-top: 35px;
     padding-right: 35px;
     position: relative;
+}
+
+.programsFilter{
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-bottom: 35px;
+}
+
+.programsFilterLeft{
+    width: 100%;
+    max-width: 310px;
+    margin-left: 30px;
+    margin-right: 90px;
 }
