--- a/styles/professions/section-professions.module.css
+++ b/styles/professions/section-professions.module.css
@@ -231,6 +231,7 @@
     -ms-flex-pack: justify;
     justify-content: space-between;
     align-content: center;
+    align-items: center;
 }
 
 @media (max-width: 1000px) {
