--- a/styles/camp/card.module.css
+++ b/styles/camp/card.module.css
@@ -3,7 +3,12 @@
     margin: 0 10px 50px 10px;
 }
 
-.boxImg{
+.carouselCard {
+    width: 320px;
+    margin: auto;
+}
+
+.boxImg {
     position: relative;
     overflow: hidden;
     display: block;
@@ -14,7 +19,7 @@
     background-size: cover !important;
 }
 
-.days{
+.days {
     position: absolute;
     left: 23px;
     top: 23px;
@@ -28,7 +33,7 @@
     border-radius: 20px;
 }
 
-.boxLink{
+.boxLink {
     border: 1px solid #c4c4c4;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -37,7 +42,7 @@
     max-width: 320px;
 }
 
-.postTitle{
+.postTitle {
     font-weight: 600;
     font-size: 16px;
     line-height: 20px;
@@ -46,7 +51,7 @@
     min-height: 40px;
 }
 
-.location{
+.location {
     font-weight: 600;
     font-size: 16px;
     line-height: 20px;
@@ -65,7 +70,7 @@
     background: url(//art-lichnost.ru/wp-content/themes/art_person_1/css/../img/arr.svg) no-repeat right center;
 }
 
-.boxLink A:hover{
+.boxLink A:hover {
     text-decoration: underline;
 }
 
