--- a/styles/proftestirovanie/testirovanie.module.css
+++ b/styles/proftestirovanie/testirovanie.module.css
@@ -24,6 +24,8 @@
     box-sizing: border-box;
     border-radius: 100px;
     padding: 14px 20px;
+    display: flex;
+    align-items: center;
 }
 
 @media (max-width: 991px) {
