--- a/styles/project/section-issledovanie.module.css
+++ b/styles/project/section-issledovanie.module.css
@@ -325,7 +325,7 @@
     width: 100%;
 }
 
-.rightBoxImg{
+.rightBoxImg {
     width: 50%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -339,19 +339,19 @@
     position: relative;
 }
 
-.img1{
+.img1 {
     width: 170px;
     height: auto;
     max-width: 100%;
 }
 
-.img2{
+.img2 {
     width: 250px;
     height: auto;
     max-width: 100%;
 }
 
-.img3{
+.img3 {
     width: 130px;
     position: absolute;
     top: 180px;
@@ -362,3 +362,72 @@
     max-width: 100%;
 }
 
+@media (max-width: 740px) {
+    .list {
+        padding: 25px;
+    }
+
+    .bottom p {
+        text-align: justify;
+    }
+
+    .image {
+        flex-shrink: 0;
+        display: block;
+        max-width: 100%;
+        max-height: 100%;
+    }
+    .left {
+        padding: 25px;
+    }
+    .contentList li {
+        width: 100%;
+    }
+    .contentList li>span {
+        margin-bottom: 0;
+      }
+    .text{
+        font-size: 14px;
+        padding: 20px;
+        width: 100%;
+    }
+    .content img{
+        display: none;
+    }
+    .rightBox{
+        display: none;
+    }
+    .leftBox{
+        width: 100%;
+    }
+    .rightBoxImg{
+        display: none;
+    }
+}
+
+@media (max-width: 980px) {
+    .left {
+        margin-top: 400px;
+        width: 100%;
+    }
+
+    .right {
+        top: -380px;
+        margin: 0 auto;
+        left: 0;
+        right: 0;
+    }
+
+    .right img {
+        left: 50%;
+        height: auto;
+        width: 360px;
+    }
+    .contentList{
+        flex-wrap: wrap;
+    }
+    .contentList li>span{
+        margin-right: 10px;
+        font-size: 14px;
+    }
+}
