--- a/styles/team/section-team.module.css
+++ b/styles/team/section-team.module.css
@@ -180,6 +180,12 @@
         -webkit-box-pack: center;
         -ms-flex-pack: center;
     }
+    .tagItem{
+        width: 100%;
+    }
+    .description{
+        width: 100%;
+    }
 }
 
 .leftBox {
@@ -194,6 +200,7 @@
 
 @media (max-width: 700px) {
     .leftBox {
+        max-width: 100%;
         padding-bottom: 15px;
     }
 
