--- a/styles/team/section-team.module.css
+++ b/styles/team/section-team.module.css
@@ -21,7 +21,8 @@
     width: 70%;
 }
 
-.principlesBox {
+.accordion {
+    border: none;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -79,13 +80,12 @@
 }
 
 .contentItem {
-    max-height: 0px;
     background-color: #fff;
     overflow: hidden;
     position: relative;
     top: 15px;
     left: 0;
-    padding: 0 52px 0px 52px;
+    padding: 0 40px 0 40px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     font-weight: 400;
@@ -180,10 +180,12 @@
         -webkit-box-pack: center;
         -ms-flex-pack: center;
     }
-    .tagItem{
+
+    .tagItem {
         width: 100%;
     }
-    .description{
+
+    .description {
         width: 100%;
     }
 }
