--- a/styles/about/section-about.module.css
+++ b/styles/about/section-about.module.css
@@ -82,7 +82,7 @@
 }
 
 .itemArr {
-    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/img/arr-red-svg.svg) no-repeat left top 4px;
+    background: url('../../components/common/img/red-arr.svg') no-repeat left top 4px;
     padding-left: 35px;
     width: 70%;
 }
