--- a/styles/camp/docs.module.css
+++ b/styles/camp/docs.module.css
@@ -44,7 +44,7 @@
     text-decoration: none;
     display: inline-block;
     padding-right: 25px;
-    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/css/../img/arr.svg) no-repeat right center;
+    background: url('../../components/common/img/red-arr.svg') no-repeat right center;
 }
 
 .boxItem A:hover {
@@ -68,7 +68,7 @@
 .medicalBlock li {
     font-size: 14px;
     line-height: 20px;
-    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/img/arr-red-svg.svg) no-repeat left 22px top 5px;
+    background: url('../../components/common/img/red-arr.svg') no-repeat left 22px top 5px;
     padding-left: 50px;
     margin-bottom: 12px;
     position: relative;
