--- a/styles/main/home-item.module.css
+++ b/styles/main/home-item.module.css
@@ -68,7 +68,7 @@
     text-decoration: none;
     display: inline-block;
     padding-right: 25px;
-    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/css/../img/arr.svg) no-repeat right center;
+    background: url('../../components/common/img/red-arr.svg') no-repeat right center;
 }
 
 .boxHomeItemRight {
