--- a/styles/project/section-issledovanie.module.css
+++ b/styles/project/section-issledovanie.module.css
@@ -109,7 +109,7 @@
 }
 
 .bottom {
-    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/img/arr-red-svg.svg) no-repeat left top 4px;
+    background: url('../../components/common/img/red-arr.svg') no-repeat left top 4px;
 }
 
 .bottom span {
