--- a/styles/course/section-course.module.css
+++ b/styles/course/section-course.module.css
@@ -113,7 +113,7 @@
 }
 
 .rightProgramm li {
-    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/img/arr-green-svg.svg) no-repeat left top 8px;
+    background: url('../../components/common/img/green-arr.svg') no-repeat left top 8px;
     padding-left: 35px;
     font-size: 14px;
     line-height: 27px;
@@ -160,7 +160,7 @@
     width: 50%;
     margin-bottom: 30px;
     padding-left: 20px;
-    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/img/list-bullet-svg.svg) no-repeat left top 4px;
+    background: url('../../components/common/img/circle.svg') no-repeat left top 4px;
 }
 
 .boxCoursesUser {
@@ -275,7 +275,7 @@
 .formSteps li {
     font-size: 14px;
     line-height: 37px;
-    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/css/../img/arr-red-svg.svg) no-repeat left top 13px;
+    background: url('../../components/common/img/red-arr.svg') no-repeat left top 13px;
     padding-left: 35px;
 }
 
