--- a/styles/proftestirovanie/section-proftestirovanie.module.css
+++ b/styles/proftestirovanie/section-proftestirovanie.module.css
@@ -58,7 +58,7 @@
     content: '';
     width: 16px;
     height: 10px;
-    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/img/arr-green-svg.svg) no-repeat left center;
+    background: url('../../components/common/img/green-arr.svg') no-repeat left center;
     left: 24px;
     top: 14px;
 }
@@ -223,7 +223,7 @@
 .formSteps li {
     font-size: 14px;
     line-height: 37px;
-    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/css/../img/arr-red-svg.svg) no-repeat left top 13px;
+    background: url('../../components/common/img/red-arr.svg') no-repeat left top 13px;
     padding-left: 35px;
 }
 
