--- a/styles/proftestirovanie/section-testirovanie.module.css
+++ b/styles/proftestirovanie/section-testirovanie.module.css
@@ -16,7 +16,7 @@
 .medicalBlock li {
     font-size: 14px;
     line-height: 20px;
-    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/img/arr-red-svg.svg) no-repeat left 22px top 5px;
+    background: url('../../components/common/img/red-arr.svg') no-repeat left 22px top 5px;
     padding-left: 50px;
     margin-bottom: 12px;
     position: relative;
@@ -113,7 +113,7 @@
 }
 
 .listFor li {
-    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/css/../img/arr-green-svg.svg) no-repeat left top 6px;
+    background: url('../../components/common/img/green-arr.svg') no-repeat left top 6px;
     padding-left: 35px;
     font-weight: 500;
     font-size: 14px;
@@ -239,7 +239,7 @@
 .formSteps li {
     font-size: 14px;
     line-height: 37px;
-    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/css/../img/arr-red-svg.svg) no-repeat left top 13px;
+    background: url('../../components/common/img/red-arr.svg') no-repeat left top 13px;
     padding-left: 35px;
 }
 
@@ -335,9 +335,10 @@
     position: absolute;
     bottom: -15px;
     left: 0;
-    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/img/arr-down-green.png) no-repeat center center;
-    width: 10px;
-    height: 16px;
+    background: url('../../components/common/img/green-arr.svg') no-repeat center center;
+    width: 16px;
+    height: 10px;
+    transform: rotate(90deg);
 }
 
 .stepTextColor {
@@ -354,7 +355,7 @@
     position: absolute;
     bottom: -15px;
     left: 0;
-    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/img/down-arr-or.png) no-repeat center center;
+    background: url('../../components/common/img/orn-arr.svg') no-repeat center center;
     width: 10px;
     height: 16px;
 }
@@ -403,7 +404,7 @@
     font-size: 14px;
     line-height: 20px;
     text-align: justify;
-    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/img/li-arr-circle.png) no-repeat left center;
+    background: url('../../components/common/img/circle.svg') no-repeat left center;
     padding-left: 24px;
 }
 
