--- a/styles/team/section-team.module.css
+++ b/styles/team/section-team.module.css
@@ -231,7 +231,7 @@
     font-size: 14px;
     line-height: 24px;
     color: #000000;
-    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/img/arr-orange-svg.svg) no-repeat left top 8px;
+    background: url('../../components/common/img/red-arr.svg') no-repeat left top 8px;
     padding-left: 25px;
 }
 
@@ -319,7 +319,7 @@
     text-decoration: none;
     display: inline-block;
     padding-right: 25px;
-    background: url(//art-lichnost.ru/wp-content/themes/art_person_1/css/../img/arr.svg) no-repeat right center;
+    background: url('../../components/common/img/red-arr.svg') no-repeat right center;
 }
 
 .left A:hover {
