--- a/styles/professions/section-professions.module.css
+++ b/styles/professions/section-professions.module.css
@@ -262,6 +262,7 @@
 @media (max-width: 1000px) {
     .formSteps {
         margin-top: 15px;
+        margin-left: 0;
     }
 }
 
@@ -338,4 +339,7 @@
     text-decoration: underline;
 }
 
+.containerBtn {
+    position: relative;
+}
 
