--- a/styles/camp/card.module.css
+++ b/styles/camp/card.module.css
@@ -1,11 +1,11 @@
 .card {
     width: 285px;
-    margin: 0 10px 50px 10px;
+    margin: 0 10px 0 10px;
 }
 
 .carouselCard {
     width: 285px;
-    margin: 0 auto 50px auto;
+    margin: 0 auto 0 auto;
 }
 
 .boxImg {
