--- a/styles/professions/slide-prozhivaniya.module.css
+++ b/styles/professions/slide-prozhivaniya.module.css
@@ -3,6 +3,10 @@
     padding-bottom: 30px;
 }
 
+.containerBtn {
+    position: relative;
+}
+
 .slideBox {
     position: relative;
     overflow: hidden;
@@ -70,7 +74,7 @@
 .video {
     max-width: 100%;
     position: relative;
-    height:  100%;
+    height: 100%;
     cursor: pointer;
     background-size: cover;
     background-repeat: no-repeat;
