--- a/styles/team/slider-team-photo.module.css
+++ b/styles/team/slider-team-photo.module.css
@@ -1,9 +1,9 @@
-.slide{
+.slide {
     width: 100%;
     display: inline-block;
 }
 
-.slide img{
+.slide img {
     width: 100%;
     border-radius: 40px;
     height: 473px;
@@ -12,3 +12,8 @@
     -o-object-position: center;
     object-position: center;
 }
+
+.containerBtn {
+    position: relative;
+}
+
