--- a/styles/common/forms.module.css
+++ b/styles/common/forms.module.css
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     border-radius: 40px;
     padding: 35px 42px 5px;
+    position: relative;
 }
 
 .titleInnerForm{
@@ -128,4 +129,18 @@
     font-weight: 600;
     font-size: 22px;
     line-height: 30px
+}
+
+.formError{
+    line-height: 8px;
+    font-weight: 600;
+    font-size: 16px;
+    color: #EB3535;
+    text-align: center;
+    position: absolute;
+    bottom: 15px;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
