--- a/styles/professions/section-professions.module.css
+++ b/styles/professions/section-professions.module.css
@@ -119,6 +119,15 @@
     -ms-flex-pack: justify;
     justify-content: space-between;
     min-height: 100px;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    border: 1px solid #C4C4C4;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border-radius: 40px;
+    padding: 30px 40px;
+    margin-top: 30px;
 }
 
 .listSkills{
@@ -128,6 +137,51 @@
     display: -ms-flexbox;
     display: flex;
     list-style: none;
+}
+
+.sistems{
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    color: #000000;
+    margin-bottom: 40px;
+}
+
+.sistemsDescription{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #000000;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.bottomTab{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin-top: 40px;
+}
+
+.price{
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 26px;
+    border: 1px solid #EB3535;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border-radius: 100px;
+    display: block;
+    padding: 10px 20px;
+    max-width: 173px;
+    width: 100%;
+    text-align: center;
 }
 
 .listSkills li{
