--- a/styles/professions/section-professions.module.css
+++ b/styles/professions/section-professions.module.css
@@ -20,7 +20,7 @@
     align-items: center;
 }
 
-.tablist li{
+.tablist li {
     border: 1px solid #C4C4C4;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -35,10 +35,10 @@
     background: #30AA33;
     cursor: pointer;
     list-style: none;
- }
+}
 
 
-.tablist li>span{
+.tablist li > span {
     text-decoration: none;
     display: block;
     font-weight: 600;
@@ -81,6 +81,7 @@
     -webkit-box-pack: start;
     -ms-flex-pack: start;
     justify-content: flex-start;
+    cursor: pointer;
 }
 
 .boxAlex span {
@@ -96,16 +97,114 @@
     transition: all 300ms ease;
 }
 
-.titleGreen:hover span{
+.titleGreen:hover span {
     color: #30aa33;
 }
 
-.titleRed:hover span{
+.titleRed:hover span {
     color: #eb3535;
 }
 
 
-.sysProfi{
+.modalFlex{
+    padding: 0 !important;
+    margin: 0 !important;
+    min-height: auto !important;
+    height: 675px !important;
+    width: 100% !important;
+    max-width: 1021px;
+    border-radius: 40px;
+    display: flex;
+    justify-content: space-between;
+    overflow: hidden;
+}
+
+.boxImgModal{
+    max-width: 314px;
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+}
+
+.boxImgModal img{
+    width: auto;
+    height: 100%;
+}
+
+.desc{
+    width: 100%;
+    max-width: 707px;
+    height: 100%;
+    position: relative;
+    padding: 70px 40px;
+    color: #000;
+}
+
+.desc h6{
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    padding-left: 35px;
+}
+
+.desc h4{
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 27px;
+    margin-bottom: 42px;
+    padding-left: 35px;
+}
+.descUl{
+    margin-bottom: 25px;
+    list-style: none;
+}
+
+.descLi{
+    background: url('../../components/common/img/green-arr.svg') no-repeat left center;
+    padding-left: 35px;
+    font-size: 14px;
+    line-height: 20px;
+    list-style: none;
+}
+
+.desc p{
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 25px;
+    padding-left: 35px;
+}
+
+.boxAges{
+    position: absolute;
+    right: 42px;
+    top: 42px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 70px;
+}
+
+.ageMiniBox{
+    background: #30AA33;
+    border-radius: 40px;
+    font-size: 12px;
+    color: #fff;
+    padding: 2px 5px;
+    margin-bottom: 5px;
+    width: 63px;
+    height: 20px;
+    text-align: center;
+}
+
+.sysProfi {
     margin-right: 10px;
     position: relative;
     display: -webkit-box;
@@ -118,7 +217,7 @@
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    min-height: 100px;
+    min-height: 237px;
     -webkit-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
@@ -130,16 +229,23 @@
     margin-top: 30px;
 }
 
-.listSkills{
-    -webkit-column-count: 1;
-    column-count: 1;
+.listSkills {
+    -webkit-column-count: 2;
+    column-count: 2;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     list-style: none;
 }
 
-.sistems{
+.load {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.sistems {
     font-weight: 600;
     font-size: 16px;
     line-height: 20px;
@@ -147,7 +253,7 @@
     margin-bottom: 40px;
 }
 
-.sistemsDescription{
+.sistemsDescription {
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
@@ -156,7 +262,7 @@
     margin-top: 20px;
 }
 
-.bottomTab{
+.bottomTab {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -169,7 +275,7 @@
     margin-top: 40px;
 }
 
-.price{
+.price {
     font-weight: 600;
     font-size: 22px;
     line-height: 26px;
@@ -184,7 +290,7 @@
     text-align: center;
 }
 
-.listSkills li{
+.listSkills li {
     width: 50%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -193,7 +299,7 @@
     -ms-flex-align: center;
     align-items: center;
     margin-bottom: 19px;
- }
+}
 
 .reasonBox {
     border: 1px solid #C4C4C4;
