--- a/styles/professions/section-professions.module.css
+++ b/styles/professions/section-professions.module.css
@@ -168,7 +168,44 @@
     list-style: none;
 }
 
-.desc p{
+.redBtn{
+    text-decoration: none;
+    width: 100%;
+    margin-top: 15px;
+    margin-left: 35px;
+    max-width: 180px;
+    height: 42px;
+    cursor: pointer;
+    border: 0;
+    padding: 12px 16px;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 18px;
+    color: #FFFFFF;
+    background-color: #eb2731;
+    border-radius: 30px;
+}
+
+.modalPriceBox{
+    margin-top: 30px;
+    padding-left: 35px;
+}
+
+.modalPriceBox p{
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 34px;
+    margin-bottom: 15px;
+}
+
+.modalPriceBox span{
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 18px;
+    display: block;
+}
+
+.descP{
     font-weight: normal;
     font-size: 14px;
     line-height: 20px;
@@ -288,6 +325,19 @@
     max-width: 173px;
     width: 100%;
     text-align: center;
+}
+
+.priceDes{
+    display: flex;
+    flex-direction: column;
+}
+
+.priceDes span{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #000000;
 }
 
 .listSkills li {
