--- a/styles/professions/section-professions.module.css
+++ b/styles/professions/section-professions.module.css
@@ -106,11 +106,11 @@
 }
 
 
-.modalFlex{
+.modalFlex {
     padding: 0 !important;
     margin: 0 !important;
     min-height: auto !important;
-    height: 675px !important;
+    height: 720px !important;
     width: 100% !important;
     max-width: 1021px;
     border-radius: 40px;
@@ -119,20 +119,20 @@
     overflow: hidden;
 }
 
-.boxImgModal{
-    max-width: 314px;
+.boxImgModal {
+    width: 340px;
     height: 100%;
     overflow: hidden;
     display: flex;
     justify-content: center;
 }
 
-.boxImgModal img{
+.boxImgModal img {
     width: auto;
     height: 100%;
 }
 
-.desc{
+.desc {
     width: 100%;
     max-width: 707px;
     height: 100%;
@@ -141,26 +141,27 @@
     color: #000;
 }
 
-.desc h6{
+.desc h6 {
     font-weight: 500;
     font-size: 14px;
     line-height: 17px;
     padding-left: 35px;
 }
 
-.desc h4{
+.desc h4 {
     font-weight: 600;
     font-size: 22px;
     line-height: 27px;
     margin-bottom: 42px;
     padding-left: 35px;
 }
-.descUl{
+
+.descUl {
     margin-bottom: 25px;
     list-style: none;
 }
 
-.descLi{
+.descLi {
     background: url('../../components/common/img/green-arr.svg') no-repeat left center;
     padding-left: 35px;
     font-size: 14px;
@@ -168,7 +169,7 @@
     list-style: none;
 }
 
-.redBtn{
+.redBtn {
     text-decoration: none;
     width: 100%;
     margin-top: 15px;
@@ -186,26 +187,26 @@
     border-radius: 30px;
 }
 
-.modalPriceBox{
+.modalPriceBox {
     margin-top: 30px;
     padding-left: 35px;
 }
 
-.modalPriceBox p{
+.modalPriceBox p {
     font-weight: 600;
     font-size: 28px;
     line-height: 34px;
     margin-bottom: 15px;
 }
 
-.modalPriceBox span{
+.modalPriceBox span {
     font-weight: normal;
     font-size: 12px;
     line-height: 18px;
     display: block;
 }
 
-.descP{
+.descP {
     font-weight: normal;
     font-size: 14px;
     line-height: 20px;
@@ -213,7 +214,7 @@
     padding-left: 35px;
 }
 
-.boxAges{
+.boxAges {
     position: absolute;
     right: 42px;
     top: 42px;
@@ -229,7 +230,7 @@
     max-width: 70px;
 }
 
-.ageMiniBox{
+.ageMiniBox {
     background: #30AA33;
     border-radius: 40px;
     font-size: 12px;
@@ -266,6 +267,7 @@
     margin-top: 30px;
 }
 
+
 .listSkills {
     -webkit-column-count: 2;
     column-count: 2;
@@ -273,6 +275,7 @@
     display: -ms-flexbox;
     display: flex;
     list-style: none;
+    flex-wrap: wrap;
 }
 
 .load {
@@ -327,12 +330,12 @@
     text-align: center;
 }
 
-.priceDes{
+.priceDes {
     display: flex;
     flex-direction: column;
 }
 
-.priceDes span{
+.priceDes span {
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -350,6 +353,7 @@
     align-items: center;
     margin-bottom: 19px;
 }
+
 
 .reasonBox {
     border: 1px solid #C4C4C4;
@@ -674,3 +678,48 @@
     position: relative;
 }
 
+
+@media (max-width: 700px) {
+    .listSkills {
+        flex-direction: column;
+        column-count: 1;
+    }
+
+    .listSkills li {
+        width: 100%;
+    }
+
+    .bottomTab {
+        flex-direction: column;
+        align-items: start;
+        margin-top: 20px;
+    }
+
+    .price {
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 400px) {
+    .tablist li {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 0;
+    }
+
+    .sysProfi {
+        margin-right: 0;
+        padding: 20px;
+        min-height: 330px;
+    }
+
+    .sistemsDescription {
+        text-align: justify;
+    }
+
+    .reasonBox {
+        padding: 20px;
+    }
+}
