--- a/styles/common/header.module.css
+++ b/styles/common/header.module.css
@@ -1,10 +1,10 @@
-.header{
+.header {
     min-height: 884px;
     height: 100vh;
 }
 
 .header:before {
-    background: rgba(0,0,0,.4);
+    background: rgba(0, 0, 0, .4);
     content: '';
     width: 100%;
     height: 100%;
