--- a/styles/common/forms.module.css
+++ b/styles/common/forms.module.css
@@ -35,14 +35,23 @@
     color: #808080;
 }
 
+.form::placeholder {
+    color: #B1B1B1;
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+}
+
 .birthdateLabel {
-    font-weight: 500;
+    font-weight: 400;
     font-size: 15px;
     line-height: 18px;
+    display: inline-block;
     margin-bottom: 5px;
     color: #4e4e4e;
     margin-left: 10px;
+    font-family: 'Montserrat', sans-serif;
 }
+
 
 .submitButton {
     background: #eb3535;
@@ -58,7 +67,7 @@
     display: block;
     margin: 5px auto 20px auto;
     cursor: pointer;
-    outline:none;
+    outline: none;
 }
 
 .formDisclaimer {
@@ -66,7 +75,7 @@
     display: -ms-flexbox;
     display: flex;
     margin: 8px 0 40px 22px;
-    line-height: 8px;
+    line-height: 120%;
     font-weight: 500;
     font-size: 10px;
     color: #4e4e4e;
