--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap');
 
 html,
 body {
@@ -13,7 +13,10 @@ html, body, div, dl, dt, dd, ul, ol, li, h1,
 h2, h3, h4, h5, h6, pre, code, form, fieldset, legend,
 input, textarea, p, blockquote, th, td {
     margin: 0;
-    padding: 0;
+	padding: 0; 
+	border: 0;
+	font-size: 100%;
+	vertical-align: baseline;
 }
 
 a {
