--- a/styles/team/section-team.module.css
+++ b/styles/team/section-team.module.css
@@ -94,7 +94,7 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
-    text-align: justify;
+    /* text-align: justify; */
     color: #000000;
     z-index: 100;
     -webkit-transition: all 300ms ease;
