--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -42,3 +42,21 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 800;
 }
+
+.contentBox{
+    margin-top: 100px;
+}
+
+.contentBox h2{
+    margin-bottom: 30px;
+}
+
+.lickBox A{
+    margin-top: 30px;
+    text-decoration: underline;
+    background: url('../components/common/img/green-arr.svg') no-repeat left center;
+    padding-left: 35px;
+    font-size: 14px;
+    line-height: 20px;
+    list-style: none;
+}
