--- a/styles/main/home-item.module.css
+++ b/styles/main/home-item.module.css
@@ -6,9 +6,9 @@
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+    -webkit-box-align: flex-start;
+    -ms-flex-align: flex-start;
+    align-items: flex-start;
 }
 
 @media (max-width: 1160px) {
