--- a/styles/professions/section-professions.module.css
+++ b/styles/professions/section-professions.module.css
@@ -35,6 +35,10 @@
     background: #30AA33;
     cursor: pointer;
     list-style: none;
+		display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 
