--- a/styles/camp/description.module.css
+++ b/styles/camp/description.module.css
@@ -13,6 +13,9 @@
 	border: 1px solid #30AA33;
 	border-radius: 20px;
 	margin: 0 5px;
+	z-index: 10;
+	background-color: #ffffff;
+
 }
 
 .titleBox {
